# Generate-QR

./: .gitignore  .replit  app.py  pyproject.toml  replit.md
attached_assets/: Pasted-import-sys-sys-executable-m-pip-install-flask-sqlalchem_1765357592537.txt
templates/: base.html  dashboard.html  home.html  login.html  register.html
